# mtgcombo

./: AllCards.sqlite3  AllThings.sqlite3  Makefile  README.md  combofinder.py  database.py  database.py.save  database.py.save.1  dumo  dump  main.py  output.txt  trawler.py
mtgcombo/: Cargo.toml  OUTPUT.txt
mtgcombo/src/: card.rs  carddb.rs  combo.rs  db.rs  io.rs  main.rs  types.rs
